Fixed experience font size on mobile and remove too short names

--- a/src/index.css
+++ b/src/index.css
@@ -848,20 +848,22 @@ footer.deviceStep div {
   font-size: 3.4em !important;
 }
 
+@media all and (max-width: 900px) {
+  .smallerTitle {
+    font-size: 2em !important;
+  }
+}
+
 @media all and (max-width: 659px) and (min-width: 50px) {
   .devicePresentation {
     font-size: 0.7em;
   }
-
+  
   .step>header>div:first-child {
     font-size: 2.5em;
   }
-
+  
   .step.deviceStep>section>h1{
     font-size: 2.5em;
-  }
-
-  .smallerTitle {
-    font-size: 2em !important;
   }
 }
